<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLines="1" />

        <EditText
            android:id="@+id/noteText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/text"
            android:maxLines="5" />

        <Button
            android:id="@+id/createNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/button_background"
            android:text="@string/create_new" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>