<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fieldsHolder"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/create_category_title"/>

    <LinearLayout
        android:id="@+id/fieldsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/categoryName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLines="1" />

        <Button
            android:id="@+id/createNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/button_background"
            android:text="@string/create_new" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>